--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@
         background-color: #4d4d65;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
-        border-bottom: 5px solid #3b3c51;
     }
     
     .content {
@@ -58,6 +57,7 @@
         color: #bf80ac;
         padding: 10px;
         font-family: 'Lato', sans-serif;
+        font-size: 14px;
     }
 
 input:focus {
